# libpHashAudio

./: AudioHash.c  AudioHash.h  CMakeLists.txt  GNUmakefile  Makefile  README.md  TestAudioHash.c  sample.txt
